# mobile-payment-app-2

./: .coverage  .env  .env.example  .gitignore  Dockerfile  NAVERPAY_INTEGRATION.md  README.md  pyproject.toml  pytest.ini  requirements.txt
11_14_class/mobile-payment-app/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
11_14_class/mobile-payment-app/src/mobile_payment_app/: __init__.py  app.py  config.py
11_14_class/mobile-payment-app/src/mobile_payment_app/models/: transaction.py
11_14_class/mobile-payment-app/src/mobile_payment_app/routes/: __init__.py  api.py  payments.py
11_14_class/mobile-payment-app/src/mobile_payment_app/services/: barcode_scanner.py  gps.py  qr_scanner.py
11_14_class/mobile-payment-app/src/mobile_payment_app/templates/: index.html
11_14_class/mobile-payment-app/tests/: test_routes.py  test_services.py
cloud_class/: 무인계산앱_SRS_v2.0.md  무인계산앱_보완_가이드라인.md
data/: payments.json  users.json
src/: fastapi_app.py
src/mobile_payment_app/: app.py  auth_routes.py  db.py  models.py  orm_models.py  routes.py
src/mobile_payment_app/api/: payments.py
src/mobile_payment_app/models/: payment.py
src/mobile_payment_app/services/: auth.py  barcode.py  gateway.py  naverpay.py  user_repository.py
src/mobile_payment_app/static/: checkout.html  complete.html  scan.html
src/mobile_payment_app/utils/: validators.py
tests/: README.md  smoke_test.py  test_auth.py  test_barcode.py  test_error_handling.py  test_health.py  test_naverpay_api.py  test_payment_integration.py  test_payments.py
(+2 files in other folders)
